// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar tests Avatar snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Rubik-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#2C2C2C",
          "fontFamily": "Rubik-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    Avatar:
  </Text>
  <View
    shape="Round"
    size={39}
    style={
      [
        {
          "borderRadius": 19.5,
          "height": 39,
          "overflow": "hidden",
          "width": 39,
        },
      ]
    }
  >
    <Image
      size={39}
      source={
        {
          "uri": "https://picsum.photos/120/120",
        }
      }
      style={
        [
          {
            "height": 39,
            "width": 39,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`Avatar tests AvatarPlaceholder snapshot test 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#FFFFFF",
        "flexBasis": 0,
        "flexGrow": 1,
        "flexShrink": 1,
        "minHeight": 600,
        "paddingBottom": 16,
        "paddingLeft": 16,
        "paddingRight": 16,
        "paddingTop": 16,
      },
    ]
  }
>
  <Text
    fontFamily="Rubik-Bold"
    fontSize={20}
    lineHeight={26}
    style={
      [
        {
          "color": "#2C2C2C",
          "fontFamily": "Rubik-Bold",
          "fontSize": 20,
          "lineHeight": 26,
        },
        {
          "marginBottom": 24,
        },
      ]
    }
  >
    Avatar:
  </Text>
  <View
    shape="Round"
    size={39}
    style={
      [
        {
          "borderRadius": 19.5,
          "height": 39,
          "overflow": "hidden",
          "width": 39,
        },
      ]
    }
  >
    <Image
      size={39}
      source={
        {
          "uri": "",
        }
      }
      style={
        [
          {
            "height": 39,
            "width": 39,
          },
        ]
      }
    />
  </View>
</View>
`;
